@@ -1,0 +1,10 @@
+<?php
+/**									signedout_list.php
+ *
+ *   	Lists students in array sids.
+ */
+
+$choice='signedout_list.php';
+$filtercode='US';
+include('register/absence_list.php');
+?>
